--- a/style/style.css
+++ b/style/style.css
@@ -57,6 +57,11 @@ a {
           align-items: center;
 }
 
+#header .mobile-menu {
+  grid-area: menu;
+  display: none;
+}
+
 #header .logo-wrapper {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
@@ -196,6 +201,10 @@ a {
   overflow: hidden;
 }
 
+#showcase .product-img img {
+  cursor: pointer;
+}
+
 #showcase .thumbnails {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -252,6 +261,7 @@ a {
 
 #showcase .showcase-content-body h2 {
   text-transform: uppercase;
+  letter-spacing: 3px;
   color: #ff7d1a;
   font-size: 1rem;
   margin-bottom: 1em;
@@ -406,6 +416,141 @@ a {
   opacity: .7;
   -webkit-box-shadow: 0 20px 15px #ffede0;
           box-shadow: 0 20px 15px #ffede0;
+}
+
+.lightbox {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
+}
+
+.lightbox .container {
+  width: 30%;
+}
+
+.lightbox .close {
+  text-align: right;
+  margin-bottom: 1em;
+  cursor: pointer;
+}
+
+.lightbox .close .close-btn {
+  fill: #ff7d1a;
+}
+
+.lightbox .product-img {
+  border-radius: 15px;
+  position: relative;
+}
+
+.lightbox .product-img img {
+  border-radius: 15px;
+}
+
+.lightbox .prev,
+.lightbox .next {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-color: white;
+  border-radius: 50px;
+  height: 40px;
+  width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+
+.lightbox .prev {
+  left: -20px;
+}
+
+.lightbox .next {
+  right: -20px;
+}
+
+.lightbox .thumbnails {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1em auto;
+  width: 80%;
+}
+
+.lightbox .thumbnail {
+  border-radius: 10px;
+  overflow: hidden;
+  border: 2px solid transparent;
+  cursor: pointer;
+}
+
+.lightbox .thumbnail.active {
+  background-color: white;
+  border-color: #ff7d1a;
+}
+
+.lightbox .thumbnail.active img {
+  opacity: .4;
+  border-radius: 10px;
+}
+
+.lightbox .thumbnail:hover {
+  border-color: #ff7d1a;
+}
+
+.lightbox .thumbnail:hover img {
+  opacity: .5;
+  border-radius: 10px;
+}
+
+.lightbox .thumbnail:not(:last-child) {
+  margin-right: 1em;
 }
 
 .attribution {
