--- a/style/style.scss
+++ b/style/style.scss
@@ -375,6 +375,11 @@ a {
         width: 40px;
         @include flex(column, center);
         cursor: pointer;
+        font-size: 1.25rem;
+
+        &:hover {
+            color: $Orange;
+        }
     }
 
     .prev {
