--- a/style/style.scss
+++ b/style/style.scss
@@ -205,6 +205,7 @@ a {
 
         .remove-product {
             margin-left: auto;
+            cursor: pointer;
         }
 
         .checkout-btn {
