--- a/style/style.scss
+++ b/style/style.scss
@@ -199,6 +199,7 @@ a {
             .total-price {
                 color: $Black;
                 font-weight: 700;
+                margin-left: .5em;
             }
         }
 
