--- a/style/style.css
+++ b/style/style.css
@@ -146,6 +146,27 @@ a {
   fill: #1d2025;
 }
 
+#header .cart-state {
+  position: absolute;
+  left: 50%;
+  bottom: 70%;
+  width: 20px;
+  padding: .2em .5em;
+  font-size: 10px;
+  font-weight: 700;
+  border-radius: 10px;
+  line-height: 1;
+  color: white;
+  background-color: #ff7d1a;
+  display: none;
+}
+
+#header .cart-state.fill {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
 #header .cart-content {
   position: absolute;
   left: 50%;
@@ -283,7 +304,7 @@ a {
 }
 
 #showcase {
-  padding-block: 5em;
+  padding-block: 4em;
 }
 
 #showcase .showcase-body {
@@ -671,12 +692,75 @@ a {
   margin-right: 1em;
 }
 
+@media only screen and (max-width: 760px) {
+  .container {
+    width: 90%;
+  }
+  #header .header-body {
+        grid-template-areas: 'menu logo nav . cart avatar';
+  }
+  #header .mobile-menu {
+    display: block;
+    position: relative;
+    z-index: 2000;
+  }
+  #header .nav {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 100vh;
+    z-index: 1000;
+    opacity: 0;
+    pointer-events: none;
+  }
+  #header .nav.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+  #header .nav-list {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    -webkit-box-pack: start !important;
+        -ms-flex-pack: start !important;
+            justify-content: flex-start !important;
+    -webkit-box-align: start !important;
+        -ms-flex-align: start !important;
+            align-items: flex-start !important;
+    width: 70vw;
+    height: 100vh;
+    padding-left: 1.25em;
+    padding-top: 7em;
+    background-color: white;
+  }
+  #header .nav-list li {
+    line-height: 1.8 !important;
+    height: auto !important;
+    margin: 0 0 1em 0 !important;
+  }
+  #header .nav-list a {
+    line-height: 0 !important;
+    font-weight: 700;
+    font-size: 1.125rem;
+    color: black !important;
+  }
+  #header .nav-list a::after {
+    display: none;
+  }
+}
+
 .attribution {
-  font-size: 11px;
+  font-size: 1rem;
   text-align: center;
+  background-color: #1d2025;
+  color: white;
+  padding: 4em 1em;
 }
 
 .attribution a {
-  color: #3e52a3;
+  color: #ff7d1a;
 }
 /*# sourceMappingURL=style.css.map */
