--- a/style/style.scss
+++ b/style/style.scss
@@ -135,6 +135,26 @@ a {
         }
     }
 
+    .cart-state {
+        position: absolute;
+        left: 50%;
+        bottom: 70%;
+        width: 20px;
+        padding: .2em .5em;
+        font-size: 10px;
+        font-weight: 700;
+        border-radius: 10px;
+        line-height: 1;
+        color: $White;
+        background-color: $Orange;
+        display: none;
+
+        &.fill {
+            display: grid;
+            place-items: center;
+        }
+    }
+
     .cart-content {
         position: absolute;
         left: 50%;
@@ -187,7 +207,7 @@ a {
             }
         }
 
-        .cart-info{
+        .cart-info {
             color: $Dark-grayish-blue;
         }
 
@@ -260,10 +280,9 @@ a {
 }
 
 
-
 // showcase
 #showcase {
-    padding-block: 5em;
+    padding-block: 4em;
 
     .showcase-body {
         @include grid();
@@ -530,7 +549,72 @@ a {
 }
 
 
+// media
+@media only screen and(max-width: 760px) {
+    .container {
+        width: 90%;
+    }
 
+    #header {
+
+        .header-body {
+            grid-template-areas:
+                'menu logo nav . cart avatar';
+        }
+
+        .mobile-menu {
+            display: block;
+            position: relative;
+            z-index: 2000;
+
+        }
+
+        .nav {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100vw;
+            background-color: rgba(0, 0, 0, 0.8);
+            height: 100vh;
+            z-index: 1000;
+            opacity: 0;
+            pointer-events: none;
+
+            &.active {
+                opacity: 1;
+                pointer-events: all;
+            }
+        }
+
+        .nav-list {
+            flex-direction: column !important;
+            justify-content: flex-start !important;
+            align-items: flex-start !important;
+            width: 70vw;
+            height: 100vh;
+            padding-left: 1.25em;
+            padding-top: 7em;
+            background-color: $White;
+
+            li {
+                line-height: 1.8 !important;
+                height: auto !important;
+                margin: 0 0 1em 0 !important;
+            }
+
+            a {
+                line-height: 0 !important;
+                font-weight: 700;
+                font-size: 1.125rem;
+                color: $Black !important;
+
+                &::after {
+                    display: none;
+                }
+            }
+        }
+    }
+}
 
 
 
@@ -546,10 +630,13 @@ a {
 
 
 .attribution {
-    font-size: 11px;
+    font-size: 1rem;
     text-align: center;
+    background-color: $Very-vark-blue;
+    color: $White;
+    padding: 4em 1em;
 }
 
 .attribution a {
-    color: hsl(228, 45%, 44%);
+    color: $Orange;
 }
